--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.4.18",
     "framer-motion": "^11.0.8",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.5.0",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
+    "react-lottie": "^1.2.4",
     "react-phone-number-input": "^3.3.9",
     "react-router-dom": "^6.22.3",
     "react-tooltip": "^5.26.3",
