--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.4.18",
     "framer-motion": "^11.0.8",
@@ -27,8 +28,10 @@
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
     "react-phone-number-input": "^3.3.9",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-tooltip": "^5.26.3",
+    "redux": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "use-dark-mode": "^2.3.1"
   },
