--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-phone-number-input": "^3.3.9",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.3",
     "redux": "^5.0.1",
     "tailwindcss": "^3.4.1",
